--- a/styles/styles.module.css
+++ b/styles/styles.module.css
@@ -19,11 +19,47 @@
   /* Styles for the right pane */
 }
 
+
+
 .imageContainer {
-  background-image: url("/pictureAuth.png");
+  background-image: url("/makam-el-chahid-alger.jpg");
   background-size: cover;
   background-position: center;
   height: 100%; /* Adjust the height as needed */
+}
+
+.backgroundContainer {
+  
+  width: 100%;
+  height: 88vh;
+  font-family: "Montserrat", sans-serif;
+}
+
+.backgroundImageContainer {
+  background-image: url("/background.png");
+  background-size: cover;
+  background-position: center;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.backgroundContainer .backgroundImageContainer .titleExplore {
+  color: #EFF0F2;
+  font-weight: bolder;
+  font-size: 100px;
+  text-align: left;
+  margin-left: 100px;
+}
+
+.backgroundContainer .backgroundImageContainer .titleExplore2 {
+  
+  color: #EFF0F2;
+  font-weight: 500;
+  font-size: 50px;
+  text-align: left;
+  margin-left: 100px;
 }
 
 .title {
@@ -107,7 +143,8 @@
 
 .menuItem:hover {
   margin: 0 40px;
-  border-bottom:1px solid #484848;
+  border-bottom:2px solid #484848;
+  font-weight: 700;
 }
 
 .menuItem a {
@@ -173,5 +210,225 @@
   color: #fff;
   width: 400px;
   background-color: #000;
+  cursor: pointer;
+}
+
+.whyGo {
+ 
+  margin-left: 150px;
+  margin-right: 100px;
+  margin-top: 100px;
+  
+}
+
+.whyGo .content {
+ 
+  margin-top: 50px;
+  display: grid;
+  grid-template-columns: 3fr 2fr;
+  gap: 100px;
+  width: 100%;
+}
+
+
+.whyGo .leftSide {
+  
+  font-size: 20px;
+  color: #524e4e;
+}
+
+.whyGo .content .leftSide .titleExplore{
+  font-size: 40px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: bold;
+  color: #484848;
+}
+
+
+.whyGo .rightSide {
+  
+}
+
+.whyGo .rightSide .algeriaImage {
+  background-image: url("/about.png");
+  background-size:cover;
+  background-position:center;
+  height: 100%;
+margin-left: 90px;
+margin-right: 90px;
+margin-top: 40px;
+  border-radius: 25px;
+}
+
+.mapContainer {
+  display: flex;
+  background-color: red;
+}
+
+.footer {
+  margin-top: 100px;
+  padding-left: 100px;
+  padding-right: 100px;
+  padding-top: 50px;
+  background-color: #EFF0F2;
+  display: grid;
+  grid-template-columns: 3fr 1fr 1fr 1fr;
+  gap: 20px;
+  height: 40vh;
+  font-family: "Montserrat", sans-serif;
+}
+
+.footer .logoFooter {
+  font-size: 80;
+  font-weight: bold;
+}
+.footer .first {
+  
+  margin-left: 40px;
+  margin-right: 40px;
+}
+
+.cardView {
+  margin-top: 50px;
+  background-color: #EFF0F2;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 20px;
+  width: 100%;
+  font-family: "Montserrat", sans-serif;
+}
+
+
+.footer h1 {
+  font-size: 40px;
+  font-weight: bold;
+  margin-bottom: 8px;
+  color: #333;
+}
+
+.footer h2 {
+  font-size: 20px;
+  font-weight: bold;
+  margin-bottom: 8px;
+  color: #333;
+}
+
+.footer p {
+  font-size: 20px;
+  color: #555;
+}
+
+.footer ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.footer li {
+  margin-bottom: 4px;
+}
+
+.footer a {
+  color: #484848;
+  text-decoration: none;
+  font-family: "Montserrat", sans-serif;
+  font-size: 14px;
+}
+
+.footer a:hover {
+  text-decoration: underline;
+}
+
+.credits {
+  background-color: #EFF0F2;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px;
+  width: 100%;
+  font-family: "Montserrat", sans-serif;
+  
+}
+
+.credits section {
+  font-size: 10px;
+  color: #484848;
+  padding-left: 100px;
+  padding-right: 100px;
+}
+
+.credits .right {
+  text-align: left;
+}
+
+.credits .creation {
+text-align: right;
+}
+
+.links {
+  color: #000;
+}
+
+.inputContainer .emptyInput {
+  border: 2px solid red;
+}
+
+.styles.modal {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  z-index: 9999;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+}
+
+.modalContent {
+  position: absolute;
+  background-color: rebeccapurple;
+  padding: 20px;
+  top:200px;
+  left: 160px;
+  border-radius: 4px;
+  height: 200px;
+  width: 400px;
+  max-width: 90%;
+  text-align: center;
+}
+
+.close {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 24px;
+  cursor: pointer;
+}
+
+.modalContent h2 {
+  margin-bottom: 20px;
+}
+
+.modalContent input {
+  display: block;
+  border-radius: 15px;
+  border: 2px solid #666666;
+  padding: 8px 12px;
+  margin-top: 10px;
+  font-size: 14px;
+  outline: none;
+  width: 360px;
+  height: 25px;
+  font-family: "Montserrat", sans-serif;
+  margin-bottom: 40px;
+}
+
+.modalContent .submit {
+  padding: 10px 20px;
+  background-color: #000;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
   cursor: pointer;
 }
