--- a/styles/styles.module.css
+++ b/styles/styles.module.css
@@ -387,7 +387,7 @@ text-align: right;
 
 .modalContent {
   position: absolute;
-  background-color: rebeccapurple;
+  background-color: #EFF0F2;
   padding: 20px;
   top:200px;
   left: 160px;
