--- a/styles/card.module.css
+++ b/styles/card.module.css
@@ -5,16 +5,48 @@
     width: 300px;
     background-color: #fff;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+  }
+
+  .card:hover {
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    padding: 16px;
+    width: 300px;
+    background-color: #fff;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.4);
+    cursor: pointer;
   }
   
   .title {
     font-size: 18px;
     font-weight: bold;
     margin-bottom: 8px;
+    margin-left: 15px;
   }
   
   .description {
     font-size: 14px;
     color: #555;
+    margin-left: 15px;
+  }
+  
+  .imageContainer {
+    width: 100%;
+    height: 200px;
+    overflow: hidden;
+    border-radius: 8px;
+  }
+  
+  .paybutton {
+    background-color: black;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 20px;
+    text-align: center;
+    cursor: pointer;
+
   }
   
