--- a/styles/styles.module.css
+++ b/styles/styles.module.css
@@ -290,10 +290,9 @@ margin-top: 40px;
 
 .cardView {
   margin-top: 50px;
-  background-color: #EFF0F2;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  gap: 20px;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap: 45px;
   width: 100%;
   font-family: "Montserrat", sans-serif;
 }
